--- a/FrontEnd/style.css
+++ b/FrontEnd/style.css
@@ -17,7 +17,7 @@ header { display: block; }
 
 html, body { position: relative; overflow-x: hidden; }
 
-body { width: 100%; background: url(../img/top-fon.jpg) center top no-repeat; background-color: #ffffff; color: #2c3844; min-height: 100vh; }
+body { width: 100%; background: url(img/top-fon.jpg) center top no-repeat; background-color: #ffffff; color: #2c3844; min-height: 100vh; }
 
 a { transition: all 0.3s ease; color: #d8d0cc; text-decoration: none; }
 
@@ -82,23 +82,23 @@ select:not(.form-control) { background: rgba(0, 0, 0, 0.3); width: 100%; border:
 
 .sparks > div { position: absolute; }
 
-.sparks .spark_1 { background: url(../img/spark.png) no-repeat; width: 764px; height: 313px; right: 0; bottom: -120px; transform: scale(0.6); opacity: 0; animation: spark-1 4s linear infinite; animation-delay: 1s; }
+.sparks .spark_1 { background: url(img/spark.png) no-repeat; width: 764px; height: 313px; right: 0; bottom: -120px; transform: scale(0.6); opacity: 0; animation: spark-1 4s linear infinite; animation-delay: 1s; }
 
 @keyframes spark-1 { 0% { bottom: -320px; transform: scale(0.6); opacity: 1; }
   25% { bottom: -240px; transform: scale(0.7); opacity: 1; }
   50% { bottom: -160px; transform: scale(0.8); opacity: 1; }
   75% { bottom: -80px; transform: scale(0.9); opacity: 0.5; }
   to { bottom: 0; transform: scale(1); opacity: 0; } }
-.sparks .spark_2 { background: url(../img/spark.png) no-repeat; width: 149px; height: 335px; right: 230px; bottom: -320px; transform: scale(0.6); animation: spark-1 4s linear infinite; animation-delay: 2s; opacity: 0; }
+.sparks .spark_2 { background: url(img/spark.png) no-repeat; width: 149px; height: 335px; right: 230px; bottom: -320px; transform: scale(0.6); animation: spark-1 4s linear infinite; animation-delay: 2s; opacity: 0; }
 
-.sparks .spark_3 { background: url(../img/spark.png) no-repeat; width: 128px; height: 165px; right: 280px; bottom: -140px; transform: scale(0.6); animation: spark-3 4s linear infinite; animation-delay: 2s; opacity: 0; }
+.sparks .spark_3 { background: url(img/spark.png) no-repeat; width: 128px; height: 165px; right: 280px; bottom: -140px; transform: scale(0.6); animation: spark-3 4s linear infinite; animation-delay: 2s; opacity: 0; }
 
 @keyframes spark-3 { 0% { bottom: -140px; -webkit-transform: scale(0.6); transform: scale(0.6); opacity: 1; }
   25% { bottom: -80px; -webkit-transform: scale(0.7); transform: scale(0.7); opacity: 1; }
   50% { bottom: -20px; -webkit-transform: scale(0.8); transform: scale(0.8); opacity: 1; }
   75% { bottom: 40px; -webkit-transform: scale(0.9); transform: scale(0.9); opacity: 0.5; }
   to { bottom: 100px; -webkit-transform: scale(1); transform: scale(1); opacity: 0; } }
-.sparks .spark-big { background: url(../img/spark.png) no-repeat; width: 794px; height: 176px; right: 0; bottom: -180px; transform: scale(0.6); animation: spark-5 4s linear infinite; opacity: 0; }
+.sparks .spark-big { background: url(img/spark.png) no-repeat; width: 794px; height: 176px; right: 0; bottom: -180px; transform: scale(0.6); animation: spark-5 4s linear infinite; opacity: 0; }
 
 @keyframes spark-5 { 0% { bottom: -180px; transform: scale(0.6); opacity: 1; }
   25% { bottom: -120px; transform: scale(0.7); opacity: 1; }
